--- a/EIPS/eip-4910.md
+++ b/EIPS/eip-4910.md
@@ -131,17 +131,13 @@ The following steps need to be taken:
 
 ### Data Structures
 
-#### Rationale: Royalty Account and Royalty Sub Accounts
+#### Royalty Account and Royalty Sub Accounts
 
 In order to create an interconnected data structure linking NFTs to RAs that is search optimized requires to make the following additions to the global data structures of an ERC721.
 
 Note, a Royalty Account is defined as a collection of Royalty Sub Accounts linked to a meta account. This meta account is comprised of general account identifiers particular to the NFT it is linked to such as asset identifier, parent identifier etc.
 
-#### Specification: Royalty Account and Royalty Sub Accounts
-
-##### **[R1]**
-
-*There MUST be a struct for a Royalty Account as minimally defined below.*
+<a id="r1">**[R1]**</a> *There MUST be a struct for a Royalty Account as minimally defined below.*
 ```
 ///
 /// @dev Definition of the struct for a Royalty Account.
@@ -207,11 +203,9 @@ mapping (uint256 => address) private _tokenindextoRA;
 mapping (address => RoyaltyAccount) private _royaltyaccount;
 ```
 
-#### Rationale: Print (Child) NFTs
+#### Print (Child) NFTs
 
 The set of requirement to manage Parent-Child NFT Relationships and constraints at each level of the NFT (family) tree e.g. number of children permitted, NFT parents have to be mapped to their immediate NFT children are as follows.
-
-#### Specification: Print (Child) NFTs
 
 ##### **[R6]**
 
@@ -266,13 +260,11 @@ function updateMaxChildren(uint 256 _tokenId, uint256 _newMaxChildren) public vi
         return true;
 };
 ```
-#### Rationale: NFT Payment Tokens
+#### NFT Payment Tokens
 
 In order to capture royalties, an NFT contract must be involved in NFT trading. Therefore, the NFT contract needs to be aware of NFT payments, which in turn requires the NFT contract to be aware which tokens can be used for trading.
 
 This document first defines the required data structures to track trading and payments.
-
-#### Specification: NFT Payment Tokens
 
 ##### **[R8]**
 
@@ -291,11 +283,9 @@ Since the NFT contract is managing royalty distributions and payouts as well as 
 mapping (address => uint256) private lastBalanceAllowedToken
 ```
 
-#### Rationale: NFT Listings and Payments
+#### NFT Listings and Payments
 
 Since the contract is directly involved in the sales process, a capability to list one or more NFTs for sale is required.
-
-#### Specification: NFT Listings and Payments
 
 ##### **[R10]**
 
@@ -357,11 +347,9 @@ mapping (uint256 => RegisteredPayment) private registeredPayment
 ```
 Note that the identifier in the mapping can for example be the first token to be sold. This is sufficient because a payment once received and distributed will be removed from the mapping.
 
-#### Rationale: Contract Constructor and Global Variables and their update functions
+#### Contract Constructor and Global Variables and their update functions
 
 This standard extends the current ERC721 constructor, and adds several global variables to recognize the special role of the creator of an NFT, and the fact that the contract is now directly involved in managing sales and royalties.
-
-#### Specification: Contract Constructor and Global Variables and their update functions
 
 ##### **[R14]**
 
@@ -544,11 +532,9 @@ For example, `bytes4(keccak256("updateMaxGenerations(uint256)")`.
 Below are the definitions and interfaces for the Royalty Account RUD (Read-Update-Delete) functions. Since a Royalty Account is created in the NFT minting function, there is no need to have a separate function to create a royalty account.
 
 
-#### Rationale: Get a Royalty Account
+#### Get a Royalty Account
 
 There is only one get function required because a Royalty Account and its sub accounts can be retrieved through the `tokenId` in the `ancestry` field of the Royalty Account. 
-
-#### Specification: Get a Royalty Account
 
 ##### **[R15]**
 
@@ -569,11 +555,9 @@ function getRoyaltyAccount (uint256 tokenId) public view virtual returns (addres
 * *`address memory accountId  = _tokenindextoRA[_tokenId];` retrieves the royalty account identifier from the mapping.*
 * *`RoyaltyAccount memory account = _royaltyaccount[accountId];` retrieves the royalty account struct from the mapping.*
 
-#### Rationale: Update a Royalty Account
+#### Update a Royalty Account
 
 In order to update a Royalty Account, the caller must have both the 'tokenId' and the `RoyaltyAccount` itself which can be obtained from the Royalty Account getter function. 
-
-#### Specification: Update a Royalty Account
 
 ##### **[R17]**
 
@@ -623,11 +607,9 @@ Note that in the rules below, `_msgSender()` is to be read as `msg.sender` or an
 
 11. *If the Royalty Account update is correct, the function returns `true`, otherwise `false`.* 
 
-#### Rationale: Deleting a Royalty Account
+#### Deleting a Royalty Account
 
 While sometimes deleting a Royalty Account is necessary, even convenient, it is a very costly function in terms of gas, and should not be used unless one is absolutely sure that the conditions enumerated below are met.
-
-#### Specification: Deleting a Royalty Account
 
 ##### **[R19]**
 
@@ -647,11 +629,9 @@ function deleteRoyaltyAccount (uint256 _tokenId) public virtual returns (bool)
 
 ### NFT Minting
 
-#### Rationale: NFT Minting
+#### Minting an NFT and its descendants
 
 In extension to the ERC721 minting capability, a Royalty Account with Royalty Sub Accounts are required to be added during the minting, besides establishing the NFT token specific data structures supporting constraints such as the maximum number of children an NFT can have. 
-
-#### Specification: NFT Minting
 
 ##### **[R21]**
 
@@ -721,15 +701,11 @@ function mint(address to, NFTToken[] memory nfttoken, string tokentype) public v
 
 ### Listing and De-Listing of NFTs for Direct Sales
 
-#### Rationale: Listing and De-Listing of NFTs for Direct Sales
-
 In the sales process, we need to minimally distinguish two types of transactions
 - Exchange-mediated sales
 - Direct sales
 
 The first type of transaction does not require that the smart contract is aware of a sales listing since the exchange contract will trigger payment and transfer transactions directly with the NFT contract as the owner. However, for the latter transaction type it is essential, since direct sales are required to be mediated at every step by the smart contract. 
-
-#### Specification: Listing and De-Listing of NFTs for Direct Sales
 
 ##### **[R27]**
 
@@ -788,11 +764,7 @@ The Boolean return value is `true` for a successful function execution, and `fal
 
 ### Payments for NFT Sales
 
-#### Rationale: Payments for NFT Sales
-
 As noted before, a buyer will always pay the NFT contract directly and not the seller. The seller is paid through the royalty distribution and can later request a payout to their wallet.
-
-#### Specification: Payments for NFT Sales
 
 ##### **[R34]**
 
@@ -910,16 +882,12 @@ Note, that the function has `reentrancy` protection through `nonReentrant` from 
 
 ### Modified NFT Transfer function
 
-#### Rationale: Modified NFT Transfer Function
-
 This document adheres to the ERC721 interface format for the `safeTransferFrom` function as given below:
 ```
 function safeTransferFrom(address from, address to, uint256 tokenId, bytes memory _data) external virtual override
 ```
 
 Note, that the input parameters must satisfy several requirements for the NFT(s) to be transferred AFTER royalties have been properly distributed. Note also, that the ability to transfer more than one token at a time is required. However, the standard interface only allows one token to be transferred at a time. In order to remain compliant with the ERC721 standard, this document uses `tokenId` only for the first NFT to be transferred. All other transfer relevant data is encoded in `_data`. 
-
-#### Specification: Modified NFT Transfer Function
 
 The high-level requirements are as follows:
 * The payment parameters of the trade encoded in `_data` must be validated.
@@ -985,13 +953,9 @@ Turning to the `_data` object.
 
 ### Distributing Royalties in the Transfer Function
 
-#### Rationale: Distributing Royalties in the Transfer Function
-
 The approach to distributing royalties is to break down the hierarchical structure of interconnected Royalty Accounts into layers, and then process one layer at time, where each relationship between a NFT and its ancestor is utilized to traverse the Royalty Account chain until the root ancestor and its associated Royalty Account.
 
 Note, that the distribution function assumes that the payment made is for ALL tokens in the requested transfer. That means, that `payment` for the distribution function is equally divided between all NFTs included in the payment. 
-
-#### Specification: Distributing Royalties in the Transfer Function
 
 ##### **[R53]**
 
@@ -1028,11 +992,7 @@ Note, that it is necessary to multiply two `uint256` numbers with each other -- 
 
 ### Update Royalty Sub Account Ownership with Payout to approved Address (`from`)
 
-#### Rationale: Update Royalty Sub Account Ownership with Payout to approved Address (`from`)
-
 In order to simplify the ownership transfer, first the approved address -- the non-contract NFT owner --, `from`, is paid out its share of the royalties. And then the Royalty Sub Account is updated with the new owner, `to`. This step repeats for each token to be transferred.
-
-#### Specification: Update Royalty Sub Account Ownership with Payout to approved Address (`from`)
 
 ##### **[R55]**
 
@@ -1054,11 +1014,7 @@ The technical NFT owner remains the NFT contract.
 
 ### Removing the Payment Entry in `registeredPayment` after successful Transfer
 
-#### Rationale: Removing the Payment Entry in `registeredPayment` after successful Transfer
-
 Only after the real ownership of the NFT, the approved address, has been updated, the payment registry entry can be removed to allow the transferred NFTs to be sold again.
-
-#### Specification: Removing the Payment Entry in `registeredPayment` after successful Transfer
 
 ##### **[R57]**
 
@@ -1069,11 +1025,7 @@ delete registeredPayment[_tokenId[[0]];
 
 ### Paying out Royalties to the `from` Address in `safeTransferFrom` Function
 
-#### Rationale: Paying out Royalties to the `from` Address in `safeTransferFrom` Function
-
 There are two versions of the payout function -- a `public` and an `internal` function -- depending on whether there is a payout during a purchase, or a payout is requested by a Royalty Sub Account owner.
-
-#### Specification: Paying out Royalties to the `from` Address in `safeTransferFrom` Function
 
 ##### **[R58]**
 
