--- a/EIPS/eip-4910.md
+++ b/EIPS/eip-4910.md
@@ -137,7 +137,7 @@ In order to create an interconnected data structure linking NFTs to RAs that is 
 
 Note, a Royalty Account is defined as a collection of Royalty Sub Accounts linked to a meta account. This meta account is comprised of general account identifiers particular to the NFT it is linked to such as asset identifier, parent identifier etc.
 
-<a id="r1">**[R1]**</a> *There MUST be a struct for a Royalty Account as minimally defined below.*
+<a name="r1">**[R1]**</a> *There MUST be a struct for a Royalty Account as minimally defined below.*
 ```
 ///
 /// @dev Definition of the struct for a Royalty Account.
