--- a/EIPS/eip-4910.md
+++ b/EIPS/eip-4910.md
@@ -158,9 +158,9 @@ struct RoyaltyAccount {
     RASubAccount[] rasubaccount;
 }
 ```
-##### **[R2]**
 
-*There MUST be a struct for a Royalty Sub-Account linked to a Royalty Account, the minimal set of which is defined below.*
+<a name="r2">**[R2]**</a> *There MUST be a struct for a Royalty Sub-Account linked to a Royalty Account, the minimal set of which is defined below.*
+
 ```
 ///
 /// @dev Definition of the struct for a Royalty Sub0Account.
